# ravenrustrag

./: .dockerignore  .editorconfig  .gitignore  404.html  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  LICENSING.md  PLAN.md  README.md  SECURITY.md  book.toml  clippy.toml  flake.nix  index.html  install.sh  mkdocs.yml  sitemap.xml
.githooks/: pre-commit
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  container.yml  docker.yml  docs.yml  packages.yml  publish.yml  release.yml
Formula/: ravenrustrag.rb
LICENSES/: COMMERCIAL.txt
SUMMARY/: index.html
api/: index.html
architecture/: index.html
aur/: PKGBUILD
changelog/: index.html
charts/ravenrustrag/: Chart.yaml  values.yaml
charts/ravenrustrag/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
cli/: index.html
configuration/: index.html
contributing/: index.html
crates/raven-cli/: Cargo.toml
crates/raven-cli/src/: main.rs
crates/raven-cli/tests/: cli_integration.rs
crates/raven-core/: Cargo.toml
crates/raven-core/benches/: cosine_bench.rs
crates/raven-core/src/: lib.rs
crates/raven-embed/: Cargo.toml
crates/raven-embed/src/: lib.rs
crates/raven-load/: Cargo.toml
crates/raven-load/src/: lib.rs
crates/raven-mcp/: Cargo.toml
crates/raven-mcp/src/: lib.rs
crates/raven-search/: Cargo.toml
crates/raven-search/benches/: search_bench.rs
crates/raven-search/src/: bm25.rs  eval.rs  graph.rs  lib.rs  multi_query.rs  rerank.rs  semantic_split.rs
crates/raven-search/tests/: stress_tests.rs
crates/raven-server/: Cargo.toml
crates/raven-server/src/: lib.rs
crates/raven-server/tests/: http_integration.rs
crates/raven-split/: Cargo.toml
crates/raven-split/proptest-regressions/: lib.txt
crates/raven-split/src/: lib.rs
crates/raven-store/: Cargo.toml
crates/raven-store/src/: lib.rs
crates/ravenrustrag/: Cargo.toml
crates/ravenrustrag/src/: lib.rs
dev/bench/: data.js
docker/: index.html
docs/: SECRETS_SETUP.md  SUMMARY.md  api.md  architecture.md  changelog.md  cli.md  configuration.md  contributing.md  docker.md  file-formats.md  hybrid-search.md  index.md  installation.md  knowledge-graph.md  mcp.md  migration.md  performance.md  quickstart.md  testing.md  troubleshooting.md
file-formats/: index.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cosine_similarity.rs  csv_loader.rs  html_loader.rs  json_loader.rs  markdown_loader.rs  text_splitter.rs
hybrid-search/: index.html
installation/: index.html
knowledge-graph/: index.html
mcp/: index.html
migration/: index.html
packaging/appimage/: build-appimage.sh  raven.desktop
packaging/aur/: PKGBUILD
packaging/chocolatey/: raven-rag.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1
packaging/flatpak/: io.github.egkristi.raven.yaml
packaging/homebrew/: raven.rb.template
packaging/mcp/: README.md  server.json
packaging/nfpm/: nfpm.yaml
packaging/scoop/: raven.json.template
packaging/snap/: snapcraft.yaml
packaging/winget/egkristi.raven/1.0.0/: egkristi.raven.installer.yaml  egkristi.raven.yaml
packaging/winget/egkristi.raven/1.0.0/locale/en-US/: egkristi.raven.locale.en-US.yaml
performance/: index.html
quickstart/: index.html
search/: search_index.json
testing/: index.html
troubleshooting/: index.html
