[workspace]
members = [
    "crates/raven-core",
    "crates/raven-embed",
    "crates/raven-store",
    "crates/raven-split",
    "crates/raven-load",
    "crates/raven-search",
    "crates/raven-server",
    "crates/raven-cli",
    "crates/raven-mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.86"
license = "AGPL-3.0-or-later"
repository = "https://github.com/egkristi/ravenrustrag"
authors = ["Erling Kristiansen"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "allow"
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
similar_names = "allow"
float_cmp = "allow"
wildcard_imports = "allow"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4.4", features = ["derive", "env"] }
axum = "0.7"
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors"] }
rusqlite = { version = "0.30", features = ["bundled"] }
sha2 = "0.10"
walkdir = "2.4"
indicatif = "0.17"
notify = "6.1"
toml = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-test = "0.4"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
