[package]
name = "raven-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "raven"
path = "src/main.rs"

[dependencies]
raven-core = { path = "../raven-core" }
raven-embed = { path = "../raven-embed" }
raven-store = { path = "../raven-store" }
raven-split = { path = "../raven-split" }
raven-load = { path = "../raven-load" }
raven-search = { path = "../raven-search" }
raven-server = { path = "../raven-server" }
raven-mcp = { path = "../raven-mcp" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
indicatif = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true
