[package]
name = "raven-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI for RavenRustRAG: index, query, ask, serve, watch, export/import"
keywords = ["cli", "rag", "search", "embedding", "ollama"]
categories = ["command-line-utilities"]

[[bin]]
name = "raven"
path = "src/main.rs"

[dependencies]
raven-core = { path = "../raven-core", version = "0.1.0-alpha.1" }
raven-embed = { path = "../raven-embed", version = "0.1.0-alpha.1" }
raven-store = { path = "../raven-store", version = "0.1.0-alpha.1" }
raven-split = { path = "../raven-split", version = "0.1.0-alpha.1" }
raven-load = { path = "../raven-load", version = "0.1.0-alpha.1" }
raven-search = { path = "../raven-search", version = "0.1.0-alpha.1" }
raven-server = { path = "../raven-server", version = "0.1.0-alpha.1" }
raven-mcp = { path = "../raven-mcp", version = "0.1.0-alpha.1" }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = "4.4"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
indicatif = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
walkdir = { workspace = true }
colored = "2"

[lints]
workspace = true
