[package]
name = "raven-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "CLI for RavenRustRAG: index, query, ask, serve, watch, export/import"
keywords = ["cli", "rag", "search", "embedding", "ollama"]
categories = ["command-line-utilities"]

[[bin]]
name = "ravenrag"
path = "src/main.rs"

[dependencies]
raven-core = { path = "../raven-core", version = "1.0.0" }
raven-embed = { path = "../raven-embed", version = "1.0.0" }
raven-store = { path = "../raven-store", version = "1.0.0" }
raven-split = { path = "../raven-split", version = "1.0.0" }
raven-load = { path = "../raven-load", version = "1.0.0" }
raven-search = { path = "../raven-search", version = "1.0.0" }
raven-server = { path = "../raven-server", version = "1.0.0" }
raven-mcp = { path = "../raven-mcp", version = "1.0.0" }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = "4.4"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
indicatif = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
walkdir = { workspace = true }
colored = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints]
workspace = true

[package.metadata.deb]
maintainer = "Erling Kristiansen <https://github.com/egkristi>"
section = "utils"
priority = "optional"
assets = [
    ["target/release/ravenrag", "usr/bin/ravenrag", "755"],
    ["../../README.md", "usr/share/doc/raven-rag/README.md", "644"],
]
extended-description = "Local-first RAG engine — fast, safe, embeddable retrieval-augmented generation in Rust. Sub-millisecond vector search. Single static binary. No Python. No virtual environments."
