[package]
name = "raven-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core types for RavenRustRAG: Document, Chunk, SearchResult, Config, errors"
keywords = ["rag", "retrieval", "document", "embedding", "search"]
categories = ["text-processing", "database"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "cosine_bench"
harness = false
