[package]
name = "raven-embed"
version.workspace = true
edition.workspace = true

[dependencies]
raven-core = { path = "../raven-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"

[features]
# ONNX support placeholder. Currently disabled due to reqwest version conflict
# (ort crate requires reqwest 0.13, workspace uses 0.11). Enable when workspace
# migrates to reqwest 0.12+. The OnnxEmbedder code is ready behind cfg(feature = "onnx").
onnx = []

[lints]
workspace = true
