[package]
name = "raven-embed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Embedding backends for RavenRustRAG: Ollama, OpenAI, cache, LLM generation"
keywords = ["embedding", "ollama", "openai", "rag", "vector"]
categories = ["science", "text-processing"]

[dependencies]
raven-core = { path = "../raven-core", version = "0.1.0-alpha.1" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
moka = { version = "0.12", features = ["sync"] }

[features]
# ONNX support placeholder. Currently disabled due to reqwest version conflict
# (ort crate requires reqwest 0.13, workspace uses 0.11). Enable when workspace
# migrates to reqwest 0.12+. The OnnxEmbedder code is ready behind cfg(feature = "onnx").
onnx = []

[lints]
workspace = true
