[package]
name = "raven-embed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Embedding backends for RavenRustRAG: Ollama, OpenAI, cache, LLM generation"
keywords = ["embedding", "ollama", "openai", "rag", "vector"]
categories = ["science", "text-processing"]

[dependencies]
raven-core = { path = "../raven-core", version = "0.1.0-alpha.1" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
moka = { version = "0.12", features = ["sync"] }
ndarray = { version = "0.17", optional = true }
ort = { version = "2.0.0-rc.12", optional = true }
tokenizers = { version = "0.20", optional = true }

[features]
# ONNX support for local embedding inference without Ollama.
# Requires Rust 1.88+ (higher than base MSRV 1.86).
onnx = ["dep:ort", "dep:tokenizers", "dep:ndarray"]

[lints]
workspace = true
