[package]
name = "raven-load"
version = "0.1.0-alpha.1"
edition = "2021"

[dependencies]
raven-core = { path = "../raven-core" }
walkdir = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
