[package]
name = "raven-load"
version.workspace = true
edition.workspace = true

[dependencies]
raven-core = { path = "../raven-core" }
walkdir = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
pdf-extract = { version = "0.7", optional = true }

[features]
default = ["pdf"]
pdf = ["dep:pdf-extract"]

[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true
