[package]
name = "raven-load"
version.workspace = true
edition.workspace = true

[dependencies]
raven-core = { path = "../raven-core" }
walkdir = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
pdf-extract = { version = "0.10", optional = true }
zip = { version = "2.0", optional = true, default-features = false, features = ["deflate"] }

[features]
default = ["pdf", "docx"]
pdf = ["dep:pdf-extract"]
docx = ["dep:zip"]

[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true
