[package]
name = "raven-mcp"
version = "0.1.0-alpha.1"
edition = "2021"

[dependencies]
raven-core = { path = "../raven-core" }
raven-search = { path = "../raven-search" }
raven-split = { path = "../raven-split" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
