[package]
name = "raven-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
raven-core = { path = "../raven-core" }
raven-search = { path = "../raven-search" }
raven-split = { path = "../raven-split" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
