[package]
name = "raven-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "MCP (Model Context Protocol) server for RavenRustRAG: stdio JSON-RPC"
keywords = ["mcp", "json-rpc", "ai-assistant", "rag", "llm"]
categories = ["network-programming"]

[dependencies]
raven-core = { path = "../raven-core", version = "1.0.0" }
raven-search = { path = "../raven-search", version = "1.0.0" }
raven-split = { path = "../raven-split", version = "1.0.0" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
raven-embed = { path = "../raven-embed", version = "1.0.0" }
raven-store = { path = "../raven-store", version = "1.0.0" }
