[package]
name = "raven-search"
version.workspace = true
edition.workspace = true

[dependencies]
raven-core = { path = "../raven-core" }
raven-embed = { path = "../raven-embed" }
raven-store = { path = "../raven-store" }
raven-split = { path = "../raven-split" }
raven-load = { path = "../raven-load" }
tokio = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "search_bench"
harness = false
