[package]
name = "raven-search"
version.workspace = true
edition.workspace = true

[dependencies]
raven-core = { path = "../raven-core" }
raven-embed = { path = "../raven-embed" }
raven-store = { path = "../raven-store" }
raven-split = { path = "../raven-split" }
raven-load = { path = "../raven-load" }
tokio = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"

[lints]
workspace = true

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true }
tempfile = "3.8"

[[bench]]
name = "search_bench"
harness = false
