[package]
name = "raven-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Search pipeline for RavenRustRAG: vector, BM25 hybrid, knowledge graph, reranking"
keywords = ["search", "bm25", "hybrid-search", "rag", "knowledge-graph"]
categories = ["algorithms", "text-processing"]

[dependencies]
raven-core = { path = "../raven-core", version = "0.1.0-alpha.1" }
raven-embed = { path = "../raven-embed", version = "0.1.0-alpha.1" }
raven-store = { path = "../raven-store", version = "0.1.0-alpha.1" }
raven-split = { path = "../raven-split", version = "0.1.0-alpha.1" }
raven-load = { path = "../raven-load", version = "0.1.0-alpha.1" }
tokio = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"

[lints]
workspace = true

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true }
tempfile = "3.8"
proptest = { workspace = true }

[[bench]]
name = "search_bench"
harness = false
