[package]
name = "raven-server"
version.workspace = true
edition.workspace = true

[dependencies]
raven-core = { path = "../raven-core" }
raven-embed = { path = "../raven-embed" }
raven-store = { path = "../raven-store" }
raven-split = { path = "../raven-split" }
raven-search = { path = "../raven-search" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
subtle = "2.6.1"

[lints]
workspace = true

[dev-dependencies]
raven-embed = { path = "../raven-embed" }
raven-store = { path = "../raven-store" }
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
hyper = "1"
