[package]
name = "raven-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "HTTP API server for RavenRustRAG: Axum, auth, CORS, OpenAPI"
keywords = ["http-server", "api", "axum", "rag", "openapi"]
categories = ["web-programming::http-server"]

[features]
default = []
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]

[dependencies]
raven-core = { path = "../raven-core", version = "1.0.0" }
raven-embed = { path = "../raven-embed", version = "1.0.0" }
raven-store = { path = "../raven-store", version = "1.0.0" }
raven-split = { path = "../raven-split", version = "1.0.0" }
raven-search = { path = "../raven-search", version = "1.0.0" }
tokio = { workspace = true }
notify = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
subtle = "2.6.1"
tokio-stream = "0.1"
futures-util = "0.3"

# OpenTelemetry (optional)
opentelemetry = { version = "0.22", optional = true }
opentelemetry_sdk = { version = "0.22", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.15", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

[lints]
workspace = true

[dev-dependencies]
raven-embed = { path = "../raven-embed", version = "1.0.0" }
raven-store = { path = "../raven-store", version = "1.0.0" }
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
hyper = "1"
tokio = { workspace = true }
serde_json = { workspace = true }
