[package]
name = "raven-store"
version.workspace = true
edition.workspace = true

[dependencies]
raven-core = { path = "../raven-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3.8"

[lints]
workspace = true
