[package]
name = "raven-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Vector storage backends for RavenRustRAG: SQLite, memory, HNSW"
keywords = ["vector-store", "sqlite", "hnsw", "rag", "similarity"]
categories = ["database", "data-structures"]

[dependencies]
raven-core = { path = "../raven-core", version = "1.0.0" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
instant-distance = { version = "0.6", optional = true }

[features]
default = ["hnsw"]
hnsw = ["dep:instant-distance"]

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3.8"

[lints]
workspace = true
