[package]
name = "ravenrustrag"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Local-first RAG engine — fast, safe, embeddable retrieval-augmented generation in Rust"
keywords = ["rag", "retrieval", "embedding", "search", "ai"]
categories = ["text-processing", "database", "science"]
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
raven-core = { path = "../raven-core" }
raven-embed = { path = "../raven-embed" }
raven-store = { path = "../raven-store" }
raven-split = { path = "../raven-split" }
raven-load = { path = "../raven-load" }
raven-search = { path = "../raven-search" }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
tempfile = "3"

[features]
default = ["pdf", "docx"]
pdf = ["raven-load/pdf"]
docx = ["raven-load/docx"]
