[package]
name = "ravenrustrag"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Local-first RAG engine — fast, safe, embeddable retrieval-augmented generation in Rust"
keywords = ["rag", "retrieval", "embedding", "search", "ai"]
categories = ["text-processing", "database", "science"]
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
raven-core = { path = "../raven-core", version = "0.1.0-alpha.1" }
raven-embed = { path = "../raven-embed", version = "0.1.0-alpha.1" }
raven-store = { path = "../raven-store", version = "0.1.0-alpha.1" }
raven-split = { path = "../raven-split", version = "0.1.0-alpha.1" }
raven-load = { path = "../raven-load", version = "0.1.0-alpha.1" }
raven-search = { path = "../raven-search", version = "0.1.0-alpha.1" }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
tempfile = "3"

[features]
default = ["pdf", "docx"]
pdf = ["raven-load/pdf"]
docx = ["raven-load/docx"]
onnx = ["raven-embed/onnx", "raven-search/onnx"]
